# petscpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
Petscpp/: BitArray.h  CMakeLists.txt  IndexSet.cpp  IndexSet.h  Ksp.cpp  Ksp.h  Map.cpp  Map.h  Matrix.cpp  Matrix.h  MatrixPartitioning.cpp  MatrixPartitioning.h  MatrixProxy.cpp  MatrixProxy.h  Petscpp.h  Utility.h  Vector.cpp  Vector.h
examples/: CMakeLists.txt
examples/ex1/: CMakeLists.txt  main.cpp
examples/poisson/: Adjacency.cpp  Adjacency.h  DiffOp.h  GaussQuadrature.h  Grids.cpp  Grids.h  Math.h  MeshPartition.cpp  MeshPartition.h  Traits.h  main.cpp  patch_make.sh  petsc_settings.conf
test/: CMakeLists.txt  main.cpp  matrix_unittest.cpp  runall.sh  unit_tests.pro  utility_unittest.cpp  vector_unittest.cpp
